# synth

./: .gitignore  Cargo.toml  justfile  package.json
src/: fft.rs  main.rs
src/app/: Cargo.toml  main.rs
src/minimal/: Cargo.toml
src/minimal/src/: lib.rs
src/synth/: Cargo.toml  fft.rs
src/synth_wasm/: Cargo.toml
src/synth_wasm/src/: synth_wasm.js
src/ui/: Cargo.toml  main.js  package.json  webpack.config.js
src/ui/app/: index.html  main.js  synth.js
src/ui/crate/: Cargo.toml
src/ui/crate/src/: app.rs  lib.rs  welcome.rs
src/ui/src/: app.rs  lib.rs  routes.rs
