[package]
name = "synth-ui"
version = "0.1.0"
authors = ["Kasper Nielsen <kasper0406@gmail.com>"]
edition = "2018"

[dependencies]
yew = "0.17.3"
yew-router = "0.14.0"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'AudioContext',
    'AudioBuffer',
    'AudioBufferSourceNode',
    'AudioDestinationNode',
]
